# wallpapergen

./: LICENSE.md  README.md  circle-cv.py  circle.py  fire.py  heartbeatlines.py  heartbeatspreadlines.py  mandelbrot.py  random.py  random_lines.py  setup.py
js-gen/: index.css  index.html  wpgen.js
python-archive/: circle.py  heartbeatspreadlines.py  setup.py
python-archive/wpgen/: __init__.py  command_line.py
python-archive/wpgen/spreadlines/: spreadlines.py
wallpaly/: package.json
wallpaly/public/: index.html
wallpaly/src/: App.css  App.tsx
wallpaly/src/components/: LinesCanvas.tsx
wallpaly/src/gfx/: FuzzyWobbleLine.ts  Lines.ts
wpgen/: .pre-commit-config.yaml  main.py  pyproject.toml
wpgen/feronia/: feronia.py
wpgen/spreadlines/: spreadlines.py
wpgen/wpgen/: command_line.py  core.py  main.py
