[tool.poetry]
name = "wpgen"
version = "0.1.0"
description = "wpgen"
authors = ["kazamatzuri <fabian@fabianhaupt.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wpgen="wpgen.command_line:main"
